k8s/apps/network/external-services/opnsense/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: opnsense
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ExternalName
  externalName: ${OPNSENSE_ADDR}
  ports:
    - name: ssh
      port: 22
    - name: http
      port: 80
    - name: https
      port: 443
